# simEngine

./: CMakeLists.txt  README.md
assignments/: assignment2.cpp  assignment3.cpp  assignment4.cpp  assignment6.cpp  assignment7.cpp  assignment8.cpp  assignment9.cpp  finalExam.cpp  project1.cpp  project2.cpp  simplePend.cpp  webCutter.cpp
python/: plot2D.py  test.py  test.txt  updateJSON.py
source/: Body.cpp  Body.h  Function.cpp  Function.h  Model.cpp  Model.h  Solver.cpp  Solver.h  averageStdDev.h  main.cpp  myAverageStdDev.cpp
source/constraints/: c_absAngle.cpp  c_absDist.cpp  c_absX.cpp  c_absY.cpp  c_constraint.cpp  c_constraint.h  c_relDist.cpp  c_relX.cpp  c_relY.cpp  c_revJoint.cpp  c_transJoint.cpp
source/forces/: f_force.cpp  f_force.h  f_forceFile.cpp  f_pointForce.cpp  f_rsda.cpp  f_torque.cpp  f_torqueFile.cpp
source/json/: jsonFunctions.cpp  jsonFunctions.h  jsonParser.h  parseJSON.cpp  updateJSON.cpp  updateJSON.h
